--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack -w",
-    "build": "webpack -p"
+    "dev": "node_modules/.bin/webpack-dev-server --content-base ./ --port 5000 --hot",
+    "build": "node_modules/.bin/webpack"
   },
   "author": "Sebastian Schulz",
   "license": "ISC",
@@ -14,7 +14,8 @@
     "babel-loader": "^7.1.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "webpack": "^3.0.0"
+    "webpack": "^3.0.0",
+    "webpack-dev-server": "^2.5.0"
   },
   "dependencies": {
     "mapbox-gl": "^0.38.0",
